Bugs Fixed in Ticket Service